# very_simple_robot_simulator

./: CMakeLists.txt  README.md  package.xml
include/very_simple_robot_simulator/: kinect_simulator.h  kobuki_simulator.h  lidar_simulator.h  vsrs_utils.h
launch/: lidar_simulator.launch  lidar_simulator.xml  minimal_simulator.launch  minimal_simulator_py.launch  minimal_simulator_py.xml  openni_simulator.launch  openni_simulator.xml  openni_simulator_py.launch  openni_simulator_py.xml  run_all.launch  run_all.xml  run_all_py.launch  world_state.launch  world_state.xml
scripts/: kinect_simulator.py  kobuki_simulator.py  lidar_simulator.py  minimal_simulator.launch  rangefinder.py  utils.py  world_state_gui.py
src/: kinect_simulator.cpp  kinect_simulator_node.cpp  kobuki_simulator.cpp  kobuki_simulator_node.cpp  lidar_simulator.cpp  lidar_simulator_node.cpp  vsrs_utils.cpp
